# SORA

./: .env.example  .gitignore  .vercelignore  MEETING_PREP.md  README.md  alembic.ini  pyproject.toml  requirements.txt
alembic/: env.py
api/: index.py
app/: main.py
app/api/v1/: router.py
app/api/v1/endpoints/: caa.py  dma.py  drones.py  sora.py
app/core/: config.py  database.py
app/models/: __init__.py  caa.py  dma.py  drone.py  sora.py
app/schemas/: caa.py  dma.py  drone.py  sora.py
app/seed/: caa_norway.py  dma_questions.py  oso_data.py  seed_runner.py  sora_data.py
app/services/: arc_calculator.py  caa_service.py  dma_scorer.py  grc_calculator.py  oso_mapper.py  sail_calculator.py  sora_engine.py
app/static/: index.html
tests/: conftest.py  test_dma_scorer.py  test_sora_engine.py
tests/test_api/: test_dma_endpoints.py  test_sora_endpoints.py
